force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Finish_Variance__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Finish_Variance__c</fullName>
    <description>The Finish Variance field contains the amount of time that represents the difference between a baseline finish date of the project and its currently scheduled finish date.  

Finish Variance = Finish Date - Baseline Finish Date</description>
    <formula>inspire1__Actual_Finish_Date__c -  inspire1__Baseline_Finish_Date__c</formula>
    <inlineHelpText>Finish Variance = Finish Date - Baseline Finish Date

The Finish Variance field contains the amount of time that represents the difference between a baseline finish date of the project and its currently scheduled finish date.</inlineHelpText>
    <label>Finish Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>