force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Issues__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Issues__c</fullName>
    <description>Captures health of project issues.</description>
    <inlineHelpText>Define health of current project issues.</inlineHelpText>
    <label>Issues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>inspire1__Status_Indicators</valueSetName>
    </valueSet>
</CustomField>