force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Issues_Comments__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Issues_Comments__c</fullName>
    <label>Issues Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>