force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Last_Task_Updated__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Last_Task_Updated__c</fullName>
    <description>Defines when last related project task was updated.</description>
    <label>Last Task Updated</label>
    <summarizedField>inspire1__Project_Tasks__c.LastModifiedDate</summarizedField>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryForeignKey>inspire1__Project_Tasks__c.inspire1__Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>