force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Last_User_Update__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Last_User_Update__c</fullName>
    <description>Captures user name of who last updated project.  Tracks updates by non Inspire Planner system user.</description>
    <label>Last User Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>