force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Last_User_Update_Time__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Last_User_Update_Time__c</fullName>
    <description>Identifies the date/time when last user updated the project.</description>
    <inlineHelpText>Identifies the date/time when last user made an update to the project.</inlineHelpText>
    <label>Last User Update Time</label>
    <type>DateTime</type>
</CustomField>