force-app/main/default/objects/inspire1__Project__c/fields/inspire1__LockTime__c.field-meta.xml
<CustomField>
    <fullName>inspire1__LockTime__c</fullName>
    <label>LockTime</label>
    <type>DateTime</type>
</CustomField>