force-app/main/default/objects/inspire1__Project__c/fields/inspire1__needUpdate__c.field-meta.xml
<CustomField>
    <fullName>inspire1__needUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag do define if project requires system update.</description>
    <label>needUpdate</label>
    <type>Checkbox</type>
</CustomField>