force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Opportunity1__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Opportunity1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity related to Project.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>