force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Overall_Project_Health__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Overall_Project_Health__c</fullName>
    <description>Captures overall health of projects.</description>
    <inlineHelpText>Define the overall health of your project.</inlineHelpText>
    <label>Overall Project Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>inspire1__Status_Indicators</valueSetName>
    </valueSet>
</CustomField>