force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Owner_Name__c</fullName>
    <description>Displays Project Owner name.</description>
    <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>