force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References parent project.</description>
    <label>Parent Project</label>
    <referenceTo>inspire1__Project__c</referenceTo>
    <relationshipLabel>Sub Projects</relationshipLabel>
    <relationshipName>SubProjects</relationshipName>
    <type>Lookup</type>
</CustomField>