force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Percent_Overdue__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Percent_Overdue__c</fullName>
    <description>Calculates the percentage the project is overdue (Total Days Overdue / Project Duration)</description>
    <formula>IF (inspire1__Project_Duration__c &gt; 0, inspire1__Days_Overdue_Project__c /  inspire1__Project_Duration__c , NULL)</formula>
    <label>% Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>