force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Percent_Slippage__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Percent_Slippage__c</fullName>
    <description>Defines the percentage the project has slipped against the original baseline.</description>
    <formula>( inspire1__Actual_Duration__c  -  inspire1__Baseline_Duration__c ) / 
 inspire1__Baseline_Duration__c</formula>
    <inlineHelpText>Defines the percentage the project has slipped against the original baseline.  Negative value defines the project has completed ahead of schedule.</inlineHelpText>
    <label>% Slippage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>