force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Planned_Value__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Planned_Value__c</fullName>
    <description>Planned Value (PV) = the budgeted amount through the current reporting period.</description>
    <inlineHelpText>Planned Value (PV) = the budgeted amount through the current reporting period.</inlineHelpText>
    <label>Planned Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>