force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Project_Key__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project_Key__c</fullName>
    <description>The Project Key becomes the prefix for tasks created within the Project.</description>
    <inlineHelpText>The Project Key becomes the prefix for tasks created within your Project.  This value must be unique.</inlineHelpText>
    <label>Project Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>