force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Project_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectsSponsored</relationshipName>
    <type>Lookup</type>
</CustomField>