force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Project_Template__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the template used to create the project.</description>
    <label>Project Template</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select a project where &apos;Is Template&apos; is checked.</errorMessage>
        <filterItems>
            <field>inspire1__Project__c.inspire1__Template__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>inspire1__Project__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>