force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Project_Type2__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project_Type2__c</fullName>
    <description>Defines the type of project methodology to use.  This will determine the components and functionality available to users.</description>
    <inlineHelpText>Defines the type of project methodology to use.  This will determine the user experience and functionality available to users.</inlineHelpText>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>inspire1__Project_Type</valueSetName>
    </valueSet>
</CustomField>