force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Remaining_Budget__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Remaining_Budget__c</fullName>
    <description>Difference between Actual Cost from Budgeted Cost.  
Calculation: Budgeted Cost - Actual Cost</description>
    <formula>inspire1__Budgeted_Cost__c -  inspire1__Actual_Cost__c</formula>
    <inlineHelpText>Difference between Actual Cost from Budgeted Cost.  
Calculation: Budgeted Cost - Actual Cost</inlineHelpText>
    <label>Remaining Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>