force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Remaining_Effort__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Remaining_Effort__c</fullName>
    <description>Difference between actual effort and planned effort.
Calculation: Total Actual Effort - Total Planned Effort</description>
    <formula>inspire1__Total_Planned_Effort__c - inspire1__Total_Actual_Effort__c</formula>
    <inlineHelpText>Difference between actual effort and planned effort.
Calculation: Total Actual Effort - Total Planned Effort</inlineHelpText>
    <label>Remaining Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>