force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Resources__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Resources__c</fullName>
    <description>Captures the health of resources for project.</description>
    <inlineHelpText>Define health of your project resources.</inlineHelpText>
    <label>Resources</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>inspire1__Status_Indicators</valueSetName>
    </valueSet>
</CustomField>