force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Risks__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Risks__c</fullName>
    <description>Captures health of project risks.</description>
    <inlineHelpText>Define health of your project risks.</inlineHelpText>
    <label>Risks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>inspire1__Status_Indicators</valueSetName>
    </valueSet>
</CustomField>