force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Save_on_Open__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Save_on_Open__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save on Open</label>
    <type>Checkbox</type>
</CustomField>