force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Schedule__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Schedule__c</fullName>
    <description>Captures health of the project schedule.</description>
    <inlineHelpText>Define health of the project schedule.</inlineHelpText>
    <label>Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>inspire1__Status_Indicators</valueSetName>
    </valueSet>
</CustomField>