force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Scheduling_Mode__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Scheduling_Mode__c</fullName>
    <description>Determines if constraints validation should be applied to scheduling of project tasks.</description>
    <label>Scheduling Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>