force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Scope__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Scope__c</fullName>
    <description>Captures health of the project scope.</description>
    <inlineHelpText>Define health of the project scope.</inlineHelpText>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>inspire1__Status_Indicators</valueSetName>
    </valueSet>
</CustomField>