force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Send_Task_Notification__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Send_Task_Notification__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sends users email notification when a task is assigned.</description>
    <label>Send Task Notification</label>
    <type>Checkbox</type>
</CustomField>