force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Slippage__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Slippage__c</fullName>
    <description>Defines the number of days the project has slipped against baseline.</description>
    <formula>inspire1__Actual_Duration__c -  inspire1__Baseline_Duration__c</formula>
    <inlineHelpText>Defines the number of days the project has slipped against baseline.  Negative value defines the project has completed ahead of schedule.</inlineHelpText>
    <label>Slippage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>