force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Start_Variance__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Start_Variance__c</fullName>
    <description>The Start Variance field contains the amount of time that represents the difference between a baseline start date of the project and its currently scheduled start date.

Start Variance = Start Date - Baseline Start Date</description>
    <formula>inspire1__Actual_Start_Date__c - inspire1__Baseline_Start_Date__c</formula>
    <inlineHelpText>Start Variance = Start Date - Baseline Start Date

The Start Variance field contains the amount of time that represents the difference between a baseline start date of the project and its currently scheduled start date.</inlineHelpText>
    <label>Start Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>