force-app/main/default/objects/inspire1__Project__c/fields/inspire1__sysBaselineFinishRollup__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysBaselineFinishRollup__c</fullName>
    <description>Rolls up Baseline Finish Date from Project Tasks.  Used to populate Project Baseline Finish Date.</description>
    <label>sysBaselineFinishRollup</label>
    <summarizedField>inspire1__Project_Tasks__c.inspire1__BaselineEndDate__c</summarizedField>
    <summaryForeignKey>inspire1__Project_Tasks__c.inspire1__Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>