force-app/main/default/objects/inspire1__Project__c/fields/inspire1__sysBaselineStartRollup__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysBaselineStartRollup__c</fullName>
    <description>Rolls up Baseline Start Date from Project Tasks.  Used to populate Project Baseline Start Date.</description>
    <label>sysBaselineStartRollup</label>
    <summarizedField>inspire1__Project_Tasks__c.inspire1__BaselineStartDate__c</summarizedField>
    <summaryForeignKey>inspire1__Project_Tasks__c.inspire1__Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>