force-app/main/default/objects/inspire1__Project__c/fields/inspire1__sysBypassBeaconRollup__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysBypassBeaconRollup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sysBypassBeaconRollup</label>
    <type>Checkbox</type>
</CustomField>