force-app/main/default/objects/inspire1__Project__c/fields/inspire1__sysCalendar__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysCalendar__c</fullName>
    <label>sysCalendar</label>
    <length>96000</length>
    <type>LongTextArea</type>
</CustomField>