force-app/main/default/objects/inspire1__Project__c/fields/inspire1__sysKeyCount__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysKeyCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>sysKeyCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>