force-app/main/default/objects/inspire1__Project__c/fields/inspire1__sysProjectSettings__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysProjectSettings__c</fullName>
    <label>sysProjectSettings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>