force-app/main/default/objects/inspire1__Project__c/fields/inspire1__sysTimezoneID__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysTimezoneID__c</fullName>
    <description>System field that captures the ID of the project time zone.</description>
    <label>sysTimeZoneID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>