force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Tasks_Completed_Rollup__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Tasks_Completed_Rollup__c</fullName>
    <description>Number of tasks that have status of Completed.</description>
    <label>Tasks Completed</label>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryForeignKey>inspire1__Project_Tasks__c.inspire1__Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>