force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Tasks_Not_Started_Rollup__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Tasks_Not_Started_Rollup__c</fullName>
    <description>Number of tasks that have status of Not Started.</description>
    <label>Tasks Not Started</label>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryForeignKey>inspire1__Project_Tasks__c.inspire1__Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>