force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Tasks_Overdue__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Tasks_Overdue__c</fullName>
    <description>Total count of project tasks overdue.</description>
    <inlineHelpText>Total count of project tasks overdue.</inlineHelpText>
    <label>Tasks Overdue</label>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__Overdue__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>inspire1__Project_Tasks__c.inspire1__Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>