force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Tasks_Without_Status_Rollup__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Tasks_Without_Status_Rollup__c</fullName>
    <description>Total number of tasks without a status for project.</description>
    <label>Tasks Without Status</label>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__Status__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryForeignKey>inspire1__Project_Tasks__c.inspire1__Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>