force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Template__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines project as a template.</description>
    <inlineHelpText>Defines project as a template.  Enables ability to use Project Template field.</inlineHelpText>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>