force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Timezone__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Timezone__c</fullName>
    <description>Captures the time zone of the Project.  This determines how date/time fields are stored.</description>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>inspire1__Timezones</valueSetName>
    </valueSet>
</CustomField>