force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Total_Actual_Effort__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Total_Actual_Effort__c</fullName>
    <description>Sum of actual effort across all project tasks.</description>
    <inlineHelpText>Sum of actual effort across all project tasks.</inlineHelpText>
    <label>Total Actual Effort</label>
    <summarizedField>inspire1__Project_Tasks__c.inspire1__Actual_Effort__c</summarizedField>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryForeignKey>inspire1__Project_Tasks__c.inspire1__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>