force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Total_Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Total_Days_Overdue__c</fullName>
    <description>Sum of all days overdue for Project Tasks.</description>
    <inlineHelpText>Sum of all days overdue for Project Tasks.</inlineHelpText>
    <label>Total Days Overdue (Tasks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>