force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Total_Duration_in_Days__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Total_Duration_in_Days__c</fullName>
    <description>Roll up summary of all Project Task duration converted to days.</description>
    <label>Total Duration in Days</label>
    <summarizedField>inspire1__Project_Tasks__c.inspire1__sysDurationInDays__c</summarizedField>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__Time_Tracking_Only__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__DurationUnit__c</field>
        <operation>notEqual</operation>
        <value>h</value>
    </summaryFilterItems>
    <summaryForeignKey>inspire1__Project_Tasks__c.inspire1__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>