force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Total_Hours_for_Workday__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Total_Hours_for_Workday__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Total Hours for Workday</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>